--- a/rest/pom.xml
+++ b/rest/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>experiment.rest</groupId>
-	<artifactId>server</artifactId>
+	<artifactId>rest</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
@@ -36,6 +36,8 @@
 
 	<build>
 		<plugins>
+		    
+		    <!-- Specifies the Java version to compile the code with (default would be a lower version otherwise) -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
@@ -45,6 +47,60 @@
 					<target>1.7</target>
 				</configuration>
 			</plugin>
+
+			<!-- Gives the jar the chosen (final) name -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<version>2.5</version>
+				<configuration>
+					<finalName>mrestserver</finalName>
+				</configuration>
+			</plugin>
+
+			<!-- Packages all the dependencies into one uber jar and creates the jar's MANIFEST.MF file -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-shade-plugin</artifactId>
+				<version>2.3</version>
+				<configuration>
+					<createDependencyReducedPom>true</createDependencyReducedPom>
+					<filters>
+						<filter>
+							<artifact>*:*</artifact>
+							<excludes>
+								<exclude>META-INF/*.SF</exclude>
+								<exclude>META-INF/*.DSA</exclude>
+								<exclude>META-INF/*.RSA</exclude>
+							</excludes>
+						</filter>
+					</filters>
+				</configuration>
+				<executions>
+					<execution>
+						<phase>package</phase>
+						<goals>
+							<goal>shade</goal>
+						</goals>
+						<configuration>
+							<transformers>
+								<transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
+								<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+									<mainClass>server.dw.RestApplication</mainClass>
+								</transformer>
+								<!-- transformer implementation="org.apache.maven.plugins.shade.resource.IncludeResourceTransformer"> 
+									<resource>META-INF/server.yaml</resource> <file>server.yaml</file> </transformer -->
+								<transformer implementation="org.apache.maven.plugins.shade.resource.DontIncludeResourceTransformer">
+									<resources>
+										<resource>.md</resource>
+									</resources>
+								</transformer>
+							</transformers>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+
 		</plugins>
 	</build>
 
