--- a/core/pom.xml
+++ b/core/pom.xml
@@ -56,7 +56,7 @@
 			<artifactId>hibernate-validator</artifactId>
 			<version>5.1.2.Final</version>
 		</dependency>
-		
+
 		<!-- ######################### -->
 		<!-- ### Logging Libraries ### -->
 		<!-- ######################### -->
@@ -69,7 +69,7 @@
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>jcl-over-slf4j</artifactId>
-			<version>1.7.7</version>
+			<version>1.7.6</version>
 		</dependency>
 
 		<!-- ######################### -->
@@ -106,6 +106,7 @@
 				<configuration>
 					<source>1.7</source>
 					<target>1.7</target>
+					<encoding>UTF-8</encoding>
 				</configuration>
 			</plugin>
 		</plugins>
