Added lon, lat and creation date properties to the message

--- a/rest/server.yaml
+++ b/rest/server.yaml
@@ -18,3 +18,4 @@ logging:
 
     # Overrides the level of server.dw to DEBUG.
     "server.dw.resource.MessageResource": DEBUG
+    "core.business.MessageService": DEBUG
