--- a/rest/server.yaml
+++ b/rest/server.yaml
@@ -1,11 +1,34 @@
 # Server connection details
 server:
+
+# Configuration for "simple" server type. 
+# Apparantly this has been written specifically for Heroku users.
+# The Procfile should specify an override for this port like so: -Ddw.server.connector.port=$PORT 
   type: simple
   applicationContextPath: /
   adminContextPath: /admin
   connector:
     type: http
     port: 8080
+
+# Configuration for "default" server type
+#  type: default
+#  applicationConnectors:
+#    - type: http
+#      port: 8080
+#    - type: https
+#      port: 8443
+#      keyStorePath: example.keystore
+#      keyStorePassword: example
+#      validateCerts: false
+#  adminConnectors:
+#    - type: http
+#      port: 8081
+#    - type: https
+#      port: 8444
+#      keyStorePath: example.keystore
+#      keyStorePassword: example
+#      validateCerts: false
 
 # Logging settings.
 logging:
@@ -19,3 +42,4 @@ logging:
     # Overrides the level of server.dw to DEBUG.
     "server.dw.resource.MessageResource": DEBUG
     "core.business.MessageService": DEBUG
+    "core.business.UserService": DEBUG
