--- a/rest/pom.xml
+++ b/rest/pom.xml
@@ -15,6 +15,7 @@
 	</properties>
 
 	<dependencies>
+		<!-- DropWizard dependencies -->
 		<dependency>
 			<groupId>io.dropwizard</groupId>
 			<artifactId>dropwizard-core</artifactId>
@@ -25,19 +26,26 @@
 			<artifactId>dropwizard-testing</artifactId>
 			<version>${dropwizard.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>io.dropwizard</groupId>
+			<artifactId>dropwizard-auth</artifactId>
+			<version>${dropwizard.version}</version>
+		</dependency>
 
+		<!-- Other modules -->
 		<dependency>
 			<groupId>experiment.rest</groupId>
 			<artifactId>core</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
+			<version>${project.version}</version>
 		</dependency>
 
 	</dependencies>
 
 	<build>
 		<plugins>
-		    
-		    <!-- Specifies the Java version to compile the code with (default would be a lower version otherwise) -->
+
+			<!-- Specifies the Java version to compile the code with (default would 
+				be a lower version otherwise) -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
@@ -58,7 +66,8 @@
 				</configuration>
 			</plugin>
 
-			<!-- Packages all the dependencies into one uber jar and creates the jar's MANIFEST.MF file -->
+			<!-- Packages all the dependencies into one uber jar and creates the jar's 
+				MANIFEST.MF file -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-shade-plugin</artifactId>
@@ -84,13 +93,16 @@
 						</goals>
 						<configuration>
 							<transformers>
-								<transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
-								<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+								<transformer
+									implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
+								<transformer
+									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
 									<mainClass>server.dw.RestApplication</mainClass>
 								</transformer>
 								<!-- transformer implementation="org.apache.maven.plugins.shade.resource.IncludeResourceTransformer"> 
 									<resource>META-INF/server.yaml</resource> <file>server.yaml</file> </transformer -->
-								<transformer implementation="org.apache.maven.plugins.shade.resource.DontIncludeResourceTransformer">
+								<transformer
+									implementation="org.apache.maven.plugins.shade.resource.DontIncludeResourceTransformer">
 									<resources>
 										<resource>.md</resource>
 									</resources>
