Spawn a new 'persist' module to house all the data integration (i.e. db related) code
- Core module smaller, better isolated and has more and better unit tests
- Persist module houses all MongoDb related code
- Restructure/renam packages

--- a/persist/pom.xml
+++ b/persist/pom.xml
@@ -1,13 +1,15 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<?xml version="1.0"?>
+<project
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
+	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>experiment.rest</groupId>
-	<artifactId>core</artifactId>
+	<artifactId>persist</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>Core functionality</name>
+	<name>Persistent storage</name>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -15,13 +17,6 @@
 	</properties>
 
 	<dependencies>
-		<!-- Other modules -->
-		<dependency>
-			<groupId>experiment.rest</groupId>
-			<artifactId>persist</artifactId>
-			<version>${project.version}</version>
-		</dependency>
-
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context</artifactId>
@@ -35,15 +30,21 @@
 		</dependency>
 
 		<dependency>
+			<groupId>javax.inject</groupId>
+			<artifactId>javax.inject</artifactId>
+			<version>1</version>
+		</dependency>
+
+		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<version>1.14.8</version>
 		</dependency>
 
 		<dependency>
-			<groupId>javax.inject</groupId>
-			<artifactId>javax.inject</artifactId>
-			<version>1</version>
+			<groupId>org.mongojack</groupId>
+			<artifactId>mongojack</artifactId>
+			<version>2.1.0</version>
 		</dependency>
 
 		<dependency>
@@ -103,6 +104,7 @@
 			<version>1.10.8</version>
 			<scope>test</scope>
 		</dependency>
+
 	</dependencies>
 
 	<build>
