Refactor Spring Context initialization to a factory class
- RestApplication class no longer contains Spring context initialization
  code
- Remove compile-time dependency in rest module on core.AppConfiguration
  (in the core module)
- Added name attributes to property source file configurations
- Fix Heroku startup issue related to location of properties file (format
  needed to be file:///path)
- Set log level on org.springframework.core.env.PropertySourcesPropertyResolver to DEBUG
- Add extra logging

--- a/rest/server.yaml
+++ b/rest/server.yaml
@@ -30,6 +30,12 @@ server:
 #      keyStorePassword: example
 #      validateCerts: false
 
+# Since all important (service) classes are provided by Spring, this must be configured to start the Spring context
+springContext:
+  displayName: Spring context
+  parentContextDisplayName: Spring parent context
+  applicationConfigurationClass: core.AppConfiguration
+
 # Authentication cache policy
 # This caches up to 10,000 principals with an LRU policy, evicting stale entries after 10 minutes.
 authenticationCachePolicy:
@@ -50,3 +56,4 @@ logging:
     "server.dw.resource.AuthenticationResource": DEBUG
     "core.service.MessageService": DEBUG
     "core.service.UserService": DEBUG
+    "org.springframework.core.env.PropertySourcesPropertyResolver": DEBUG
