Big refactor of persist module
- Change a lot of package names
- Removed the construction of a new MetricRegistry in RestApplication.
  This is now obtained from the environment as it should be.
- Considerable addition of functionality around user registration (not
  working yet)

--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,8 @@
     <artifactId>parent</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>pom</packaging>
-    <name>parent</name>
+    <name>Module container</name>
+    <description>Container project to build the other modules</description>
     
 	<modules>
         <module>rest</module>
