Implement new user related functions for Stormpath
- Create new AuthenticationService implementation for Stormpath
- Create new RegistrationService implementation for Stormpath
- Improve packaging in the persist module for auth/reg related classes
- Fix bug where validation on user reg was not activated
- Add logging to HttpsEnforcer

--- a/persist/src/main/resources/default.properties
+++ b/persist/src/main/resources/default.properties
@@ -1,5 +1,7 @@
 # This abstracts away from the inconveniently names variable MONGOLAB_URI. The source code uses only MONGO_URI
 MONGO_URI=${MONGOLAB_URI}
+STORMPATH_API_KEY_PATH=${HOME}/.stormpath/apiKey.properties
+application.name=My Application
 mongo.db.name=mydb
 
 # This specifies a default value for the variable so that it does not have to be set as a system property
