--- a/persist/pom.xml
+++ b/persist/pom.xml
@@ -14,7 +14,8 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<spring.version>4.1.1.RELEASE</spring.version>
-	</properties>
+		<stormpath.version>1.0.RC3.preview.0</stormpath.version>
+			</properties>
 
 	<dependencies>
 		<dependency>
@@ -51,6 +52,21 @@
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-validator</artifactId>
 			<version>5.1.2.Final</version>
+		</dependency>
+
+		<!-- ########################## -->
+		<!-- ### Stormpath security ### -->
+		<!-- ########################## -->
+		<dependency>
+			<groupId>com.stormpath.sdk</groupId>
+			<artifactId>stormpath-sdk-api</artifactId>
+			<version>${stormpath.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.stormpath.sdk</groupId>
+			<artifactId>stormpath-sdk-httpclient</artifactId>
+			<version>${stormpath.version}</version>
+			<scope>runtime</scope>
 		</dependency>
 
 		<!-- ######################### -->
